--- a/trunk/Homepage.html
+++ b/trunk/Homepage.html
@@ -19,7 +19,7 @@
 		<div class="hero-container">
 			<div class="span6">
 				<h1>Start Sharing about Fishing</h1>
-				<p>Localhostr lets you upload all sorts of files and share them with the world, or with just that one person who needs it.</p>
+				<p>Localhost lets you upload all sorts of files and share them with the world, or with just that one person who needs it.</p>
 			</div>
 			<div class="action pull-right"><a href="/signup" class="btn btn-success btn-sign-up">Sign Up Now</a> It's Free!<!--  or <a href="#more" class="findoutmore">Find out more</a> -->
 			</div>
@@ -37,11 +37,11 @@
 				 <div>
 					<ul class="nav nav-pills">
 						<li class="active">
-							<a href="#">Home</a>
+							<a href="homepage.html">Home</a>
 						</li>
-						<li><a href="#">Profile</a></li>
-						<li><a href="#">Event</a></li>
-						<li><a href="#">Wisata Pancing</a></li>
+						<li><a href="profile.html">Profile</a></li>
+						<li><a href="event.html">Event</a></li>
+						<li><a href="wp.php">Wisata Pancing</a></li>
 					</ul>
 
 				</div>
@@ -114,24 +114,17 @@
 		<div id="div-regForm">
 		<div class="form-title">Login to your account
 		<div class="form-sub-title">We're happy to see you return! Please login to continue
-		
 		<table><form id="regForm" action="proses.php" method="post">
-		
 			  <tr>
 				<td><strong>Form Login </strong></td>
 			  </tr>
 			  <tr>
-				<td>Username</td>
-				<td>:
-				<input name="email" type="text" id="email" /></td>
+				<td>Username: <input name="email" type="text" id="email" /></td>
 			  </tr>
 			  <tr>
-				<td>Password</td>
-				<td>:
-				<input name="pass" type="password" id="pass" /></td>
+				<td>Password: <input name="pass" type="password" id="pass" /></td>
 			  </tr>
 			  <tr>
-				<td>&nbsp;</td>
 				<td>
 				<div class="control-group">
 				<div class="controls">
@@ -139,8 +132,8 @@
 					<input type="checkbox"> Remember me
 				</label>
 				</td>
-				<br><tr><td>
-						<td><input name="Login" type="submit" id="Login" class="btn btn-success" value="Submit" /></td></td></tr></br>
+				<tr><td>
+					<input name="Login" type="submit" id="Login" class="btn btn-success" value="Submit" /></td></tr>
 			  </tr>
 	<br>
 	<td>
@@ -165,7 +158,7 @@
 					 
 					<address>
 					<strong>apa</strong><br>
-					  <a href="mailto:#">apaaja@gmail.com</a>
+					  <a href="mailto:#">i-fishing@gmail.com</a>
 					</address>
 		</br>			
 	</ul>
